# LuxiFer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  branding.conf  optimize.md  update.sh
charon/: Cargo.toml  README.md
charon/src/: lib.rs
crates/luxifer-core/src/: arrange.rs  interact.rs  lib.rs  project.rs
docs/: memo-2026-07-18-abend.md  native_function_matrix.md  native_only_migration_tasks.md  native_todo_bedienung.md
docs/adr/: 0001-gui-first-offline-first.md  0001-treiber-abstraktion.md  0002-machine-command-queue.md  0002-panel-system.md  0003-gui-gestaltung.md  0003-projektformat.md  0004-asset-store-und-bild-import.md  0005-laser-preview.md  0006-ruida-treiber.md  0007-laser-profile-und-geraeteaktionen.md  0008-render-architektur-gpu.md  0009-design-canvas-webgl-only.md  0010-nativer-renderer-wgpu.md  0011-native-only-anwendungsschicht-und-tauri-abbau.md  0012-charon-lokaler-handshake.md  0012-hub-lokaler-handshake.md  0013-egui-wgpu-versionssprung.md  0014-bildvorschau-vektorisieren-und-zuschneiden.md  0015-treiberautoritative-ausfuehrungsspur.md  0017-konfigurierbares-gpu-antialiasing.md  0018-konfigurierbare-tastaturkuerzel.md  0019-materialrezepte-fuer-laserlayer.md  0020-benannte-werkstueck-nullpunkte.md  0021-zusatzachsen-z-u-und-rotary.md  0022-rotary-bauarten-und-achsenkalibrierung.md  0023-rotary-gravur.md  0024-grblhal-transport-und-protokollgrenze.md
docs/referenz/: 01-thorburn-analyse.md  02-funktions-worksheet.md
docs/roadmap/: grblhal.md
hub/: Cargo.toml  README.md
hub/src/: lib.rs  main.rs
luxifer/: LuxiFer.slnx
luxifer/application/: Cargo.toml
luxifer/application/src/: assets.rs  charon.rs  error.rs  laser.rs  lib.rs  project.rs  session.rs  sync_inbox.rs  sync_outbox.rs  test_env.rs
luxifer/application/src/laser/: tests.rs
luxifer/application/src/project/: tests.rs
luxifer/application/src/session/: actions.rs  drawing.rs  images.rs  layers.rs  preview.rs  selection.rs  tests.rs
luxifer/core/: Cargo.toml
luxifer/core/examples/: pf_check.rs
luxifer/core/src/: assets.rs  bezier.rs  execution.rs  geo_ops.rs  geometry.rs  import.rs  interact.rs  job.rs  laser.rs  lib.rs  materials.rs  model.rs  nesting.rs  pattern_fill.rs  preview.rs  project.rs  raster.rs  scanline.rs  state.rs  text.rs  ui_settings.rs
luxifer/drivers/ruida/: Cargo.toml
luxifer/frontend/: dev.sh  index.html  package-lock.json  package.json  release.sh  tsconfig.json  vite.config.ts
luxifer/frontend/src/: App.svelte  app.css
luxifer/frontend/src-tauri/: Cargo.toml  tauri.conf.json
luxifer/native/: Cargo.toml  README.md
luxifer/native/src/: app.rs  camera.rs  fonts.rs  gpu.rs  icons.rs  image_gpu.rs  laser.rs  laserpanel.rs  main.rs  project.rs  scene_geo.rs  tools.rs  ui.rs
luxifer/src/LuxiFer.App/: App.axaml  App.axaml.cs  LuxiFer.App.csproj  Program.cs  ViewLocator.cs  app.manifest
luxifer/src/LuxiFer.Machines/: IMachineDriver.cs  LuxiFer.Machines.csproj  MachineCommandQueue.cs
luxifer/src/LuxiFer.Machines.Ruida/: LuxiFer.Machines.Ruida.csproj  RuidaDriver.cs
luxifer/tests/LuxiFer.Core.Tests/: LuxiFer.Core.Tests.csproj  ShapeTests.cs  StateGuardTests.cs  UndoTests.cs
scripts/: build-appimage.sh  generate-icons.sh  install-desktop-entry.sh  install-hub.sh  run-local-charon-demo.sh  run-local-hub-demo.sh
sharon/: Cargo.toml
sharon/crates/sharon-core/: Cargo.toml
sharon/crates/sharon-core/src/: lib.rs  project.rs  session.rs
sharon/crates/sharon-server/: Cargo.toml
sharon/crates/sharon-server/src/: main.rs
sharon/crates/sharon-store/: Cargo.toml
sharon/crates/sharon-store/src/: lib.rs
studio/application/: Cargo.toml
studio/application/src/: assets.rs  catalog_sync.rs  hub.rs  laser.rs  lib.rs  materials.rs  persistence.rs  project.rs  session.rs  sync_inbox.rs  sync_outbox.rs  test_env.rs
studio/core/: Cargo.toml  build.rs
studio/core/examples/: pf_check.rs
studio/core/src/: arrange.rs  assets.rs  branding.rs  datetime.rs  job.rs  laser.rs  lib.rs  project.rs  shortcuts.rs  text.rs  ui_settings.rs
studio/drivers/grbl/: Cargo.toml
studio/drivers/ruida/: Cargo.toml
studio/native/: Cargo.toml  README.md  build.rs
(+176 files in other folders)
