[workspace]
resolver = "2"
members = ["crates/sharon-server", "crates/sharon-core", "crates/sharon-store"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
