[package]
name = "luxifer-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI-unabhängige Anwendungsschicht für LuxiFer."

[dependencies]
luxifer-core = { path = "../core" }
luxifer-driver-ruida = { path = "../drivers/ruida" }
luxifer-driver-grbl = { path = "../drivers/grbl" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Nur für Tests: PNG-Testbilder erzeugen (Trace/Raster). Gleiche Version wie
# der Core, verursacht also keinen zusätzlichen Build.
image = { workspace = true }
