[package]
name = "studio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Kern von Studio: Datenmodell, Geometrie, Layer/Farbe, Undo. UI-frei."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
i_overlay = { workspace = true }
cavalier_contours = { workspace = true }
ttf-parser = { workspace = true }
usvg = { workspace = true }
dxf = { workspace = true }
