[package]
name = "sharon-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sharon"
path = "src/main.rs"

[dependencies]
sharon-core = { path = "../sharon-core" }
sharon-store = { path = "../sharon-store" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
